--- a/AndroidBienchen/res/values/strings.xml
+++ b/AndroidBienchen/res/values/strings.xml
@@ -12,5 +12,14 @@
     <string name="title_activity_calendar">CalendarActivity</string>
     <string name="insertname">Veranstaltung</string>
     <string name="insertinfo">Veranstaltungsinfo</string>
+    <string name="presence_button">Anwesend</string>
+    <string name="chat_button">Chat</string>
+    <string name="calendar_button">Kalender</string>
+    <string name="statistic_button">Statistik</string>
+    <string name="cam_button">Cam</string>
+    <string name="website_button">Website</string>
+    <string name="grad_kg">Kg/Celsius</string>
+    <string name="day">Tag</string>
+    
 
 </resources>
