--- a/AndroidBienchen/res/values/strings.xml
+++ b/AndroidBienchen/res/values/strings.xml
@@ -22,5 +22,47 @@
 	<string name="website">Website</string>
     <string name="grad_kg">Kg/Celsius</string>
     <string name="day">Tag</string>
+    
+    <string name="invalid_action_detail">Invalid Action Detail</string>
+    <string name="invalid_action">Invalid Action</string>
+    <string name="geofence_input_error_radius_invalid">Input Error! Invalid Radius</string>
+    <string name="geofence_input_error_longitude_invalid">Input Error! Invalid Longitude</string>
+    <string name="geofence_input_error_latitude_invalid">Input Error! Invalid Latitude</string>
+    <string name="geofence_input_error_missing">Input Error! Missing</string>
+    <string name="add_geofences_already_requested_error">Geofence Already Requested</string>
+    <string name="remove_geofences_already_requested_error">Remove Already Requested Error</string>
+    <string name="play_services_available">Play Services Available</string>
+    <string name="unknown_activity_request_code">Unknown Activity</string>
+	<string name="no_resolution">No Resolution</string>
+	<string name="lat_lng_pattern">Lattitude and Longitude Pattern</string>
+	<string name="radius_pattern">Radius Pattern</string>
+	<string name="geofence_transition_error_detail">Transition Error Detail</string>
+	<string name="geofence_transition_notification_title">Transition Notification Detail</string>
+	<string name="geofence_transition_notification_text">Notification Text</string>
+	<string name="geofence_transition_invalid_type">Invalid Type</string>
+	<string name="geofence_transition_entered">Entered Transition</string>
+	<string name="geofence_transition_exited">Exit Transition</string>
+	<string name="geofence_transition_unknown">Unknown Transition</string>
+	<string name="add_geofences_result_success">Result Success</string>
+	<string name="add_geofences_result_failure">Result Failure</string>
+	<string name="connected">Connected</string>
+	<string name="disconnected">Disconnected</string>
+	<string name="connection_error_internal">Internal Connection Error</string>
+	<string name="connection_error_misconfigured">Misfigured Connection</string>
+	<string name="connection_error_invalid_account">Invalid Account</string>
+	<string name="connection_error_license_check_failed">License Check Failed</string>
+	<string name="connection_error_network">Connection Network Error</string>
+	<string name="connection_error_needs_resolution">Connection Needs Resolution</string>
+	<string name="connection_error_disabled">Connection Disabled</string>
+	<string name="connection_error_invalid">Invalid Connection</string>
+	<string name="connection_error_missing">Missing Connection</string>
+	<string name="connection_error_outdated">Outdated Connection</string>
+	<string name="connection_error_sign_in_required">Sihn In Required</string>
+	<string name="connection_error_unknown">Unknown Error</string>
+	<string name="remove_geofences_intent_success">Intent Remove Successful</string>
+	<string name="remove_geofences_intent_failure">Intent Remove Failure</string>
+	<string name="remove_geofences_id_success">ID Remove Success</string>
+	<string name="remove_geofences_id_failure">ID Remove Failure</string>
+	
 
 </resources>
