--- a/AndroidBienchen/res/values/strings.xml
+++ b/AndroidBienchen/res/values/strings.xml
@@ -12,6 +12,15 @@
     <string name="title_activity_calendar">CalendarActivity</string>
     <string name="title_activity_main">MainActivity</string>
     
+    <!-- Navdrawer titles -->
+    <string name="present">Anwesend</string>
+    <string name="chat">Chat</string>
+    <string name="calendar">Kalender</string>
+    <string name="statistic">Stastistik</string>
+    <string name="live_image">Bienenstock</string>
+    <string name="website_link">Zur Website</string>
+    
+    
     <!-- Fragment titles -->
     <string name="presence">Presence</string>
 	<string name="chat">Chat</string>
@@ -33,15 +42,19 @@
 	<string name="drawer_open">Open navigation drawer</string>
 	<string name="drawer_close">Close navigation drawer</string>	
     
+	<!-- Cam Description -->
+	<string name="image_description">Hier die aktuellste Ansicht vom Lehrbienenstand!</string>
+	
     <!-- Statisic -->
     <string name="grad_kg">Kg/Celsius</string>
     <string name="day">Tag</string>
     
     <!-- Error Messages -->
+    <string name="empty_edit_text">Das Verschicken leerer Nachrichten ist nicht möglich!</string>
     <string name="update_error">Keine Internetverbindung!</string>
-    <string name="update_error_message">Unable to Update Data: </string>
-    <string name="update_local_data_error">Failed to Load Local Data: </string>
+    <string name="update_local_data_error">Update Fehlgeschlagen!</string>
     <string name="no_network_error_message">Lieber Bienenfreund! Der Kalender ist nur mit vorhandener Internetverbindung editierbar!</string>
+    <string name="server_connection_error">Verbindung zum Server Fehlgeschlagen!</string>
     
     <!-- Presence Status -->
     <string name="online">Online</string>
@@ -56,48 +69,4 @@
     <string name="update_succeed">Update Erfolgreich!</string>
     <string name="data_updated">Daten sind auf dem neuesten Stand!</string>
     <string name="btn_ok">OK</string>
-    
-    <!-- Geofence -->
-    <string name="invalid_action_detail">Invalid Action Detail</string>
-    <string name="invalid_action">Invalid Action</string>
-    <string name="geofence_input_error_radius_invalid">Input Error! Invalid Radius</string>
-    <string name="geofence_input_error_longitude_invalid">Input Error! Invalid Longitude</string>
-    <string name="geofence_input_error_latitude_invalid">Input Error! Invalid Latitude</string>
-    <string name="geofence_input_error_missing">Input Error! Missing</string>
-    <string name="add_geofences_already_requested_error">Geofence Already Requested</string>
-    <string name="remove_geofences_already_requested_error">Remove Already Requested Error</string>
-    <string name="play_services_available">Play Services Available</string>
-    <string name="unknown_activity_request_code">Unknown Activity</string>
-	<string name="no_resolution">No Resolution</string>
-	<string name="lat_lng_pattern">Lattitude and Longitude Pattern</string>
-	<string name="radius_pattern">Radius Pattern</string>
-	<string name="geofence_transition_error_detail">Transition Error Detail</string>
-	<string name="geofence_transition_notification_title">Transition Notification Detail</string>
-	<string name="geofence_transition_notification_text">Notification Text</string>
-	<string name="geofence_transition_invalid_type">Invalid Type</string>
-	<string name="geofence_transition_entered">Entered Transition</string>
-	<string name="geofence_transition_exited">Exit Transition</string>
-	<string name="geofence_transition_unknown">Unknown Transition</string>
-	<string name="add_geofences_result_success">Result Success</string>
-	<string name="add_geofences_result_failure">Result Failure</string>
-	<string name="connected">Connected</string>
-	<string name="disconnected">Disconnected</string>
-	<string name="connection_error_internal">Internal Connection Error</string>
-	<string name="connection_error_misconfigured">Misfigured Connection</string>
-	<string name="connection_error_invalid_account">Invalid Account</string>
-	<string name="connection_error_license_check_failed">License Check Failed</string>
-	<string name="connection_error_network">Connection Network Error</string>
-	<string name="connection_error_needs_resolution">Connection Needs Resolution</string>
-	<string name="connection_error_disabled">Connection Disabled</string>
-	<string name="connection_error_invalid">Invalid Connection</string>
-	<string name="connection_error_missing">Missing Connection</string>
-	<string name="connection_error_outdated">Outdated Connection</string>
-	<string name="connection_error_sign_in_required">Sihn In Required</string>
-	<string name="connection_error_unknown">Unknown Error</string>
-	<string name="remove_geofences_intent_success">Intent Remove Successful</string>
-	<string name="remove_geofences_intent_failure">Intent Remove Failure</string>
-	<string name="remove_geofences_id_success">ID Remove Success</string>
-	<string name="remove_geofences_id_failure">ID Remove Failure</string>
-	
-
 </resources>
